--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,5 +7,8 @@ homepage: https://github.com/Janamou/frend-dart
 environment:
   sdk: '>=1.0.0 <2.0.0'
 
+dependencies:
+  browser: '>=0.10.0 <0.11.0'
+
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
